# ChangeLog for x11-misc/fbdesk
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbdesk/ChangeLog,v 1.10 2004/09/09 17:36:55 sekretarz Exp $

  09 Sep 2004; Karol Wojtaszek <sekretarz@gentoo.org>
  +files/fbdesk-1.1.5-gcc34.patch, fbdesk-1.1.5.ebuild:
  Fixed gcc-34 compile issues. Bug #53910

  14 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> fbdesk-1.1.5.ebuild:
  Added IUSE=

  28 Oct 2003; Brandon Hale <tseng@gentoo.org> fbdesk-1.1.5.ebuild:
  marking 1.1.5 stable on ppc

  24 Oct 2003; Brandon Hale <tseng@gentoo.org> fbdesk-1.1.2.ebuild,
  fbdesk-1.1.5.ebuild:
  marking 1.1.5 stable on x86.

  13 Oct 2003; ,,, <brandon@gentoo.org> fbdesk-1.1.2.ebuild,
  fbdesk-1.1.5.ebuild:
  Updated keywords, marked 1.1.2 stable on x86

*fbdesk-1.1.5 (16 Sep 2003)

  16 Sep 2003; Brandon Hale <tseng@gentoo.org> fbdesk-1.1.5.ebuild:
  version bump.

*fbdesk-1.1.2 (26 Jan 2003)

  02 apr 2003; <spider@gentoo.org> fbdesk-1.1.2.ebuild:
  Fixed xpm dep, bug 1446

  26 Jan 2003; Brad Cowan <bcowan@gentoo.org> fbdesk-1.1.2.ebuild,
  files/digest-fbdesk-1.1.2, ChangeLog:
  Initial import.  Ebuild submitted by Laurent Maestracci <laurent@maestracci.net>.
  