@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/fbdesk
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbdesk/ChangeLog,v 1.10 2004/09/09 17:36:55 sekretarz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbdesk/ChangeLog,v 1.11 2004/09/27 19:04:03 sekretarz Exp $
+
+*fbdesk-1.2.1 (27 Sep 2004)
+
+  27 Sep 2004; Karol Wojtaszek <sekretarz@gentoo.org> +fbdesk-1.2.1.ebuild:
+  Version bump, added debug and png USE flag, Bug #65558
 
   09 Sep 2004; Karol Wojtaszek <sekretarz@gentoo.org>
   +files/fbdesk-1.1.5-gcc34.patch, fbdesk-1.1.5.ebuild:
